// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should match snapshots h1 1`] = `
<DocumentFragment>
  <h1
    class="sc-aXZVg isOYYe"
  >
    Test Heading
  </h1>
</DocumentFragment>
`;

exports[`Heading should match snapshots h2 1`] = `
<DocumentFragment>
  <h2
    class="sc-aXZVg fIhqUS"
  >
    Test Heading
  </h2>
</DocumentFragment>
`;

exports[`Heading should match snapshots h3 1`] = `
<DocumentFragment>
  <h3
    class="sc-aXZVg dOlIya"
  >
    Test Heading
  </h3>
</DocumentFragment>
`;

exports[`Heading should match snapshots h4 1`] = `
<DocumentFragment>
  <h4
    class="sc-aXZVg gJsjHi"
  >
    Test Heading
  </h4>
</DocumentFragment>
`;

exports[`Heading should match snapshots h5 1`] = `
<DocumentFragment>
  <h5
    class="sc-aXZVg gOlEqp"
  >
    Test Heading
  </h5>
</DocumentFragment>
`;

exports[`Heading should match snapshots h6 1`] = `
<DocumentFragment>
  <h6
    class="sc-aXZVg bmEDTs"
  >
    Test Heading
  </h6>
</DocumentFragment>
`;
